# sentinela-hl

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  schema.txt
benchmarks/: run_bench.py
docs/: 110-docker-compose.md  111-estrutura-python.md  112.1-workflow-n8n-esqueleto.md  112.1-workflow.md  112.2A-collector-adapter.md  112.2B-pipeline.md  112.2C-claim-builder.md  112.2C-evidence-builder-rev2.md  112.4-rev2-pipeline-calibration.md  112.4-scientific-validation-report.md  112.5-persistencia-supabase.md  112.6A-bulletin-engine.md  112.7A-scientific-taxonomy.md  112.7B-research-profile.md  112.7C-event-radar.md  112.7D-concept-fingerprint.md  113-agente-de-filtros.md  workflow-112.1.json
docs/decisions/: ADR-001-editorial-strategy.md  ADR-002-n8n-thin-orchestrator.md  ADR-003-single-llm-call.md  ADR-004-contracts-first.md  ADR-005-science-before-reflection.md  ADR-006-knowledge-before-presentation.md  ADR-007-scientific-prioritization-architecture.md  README.md
profiles/: henrique_lobo.yaml
reports/: validation-2026-07-04.html  validation-2026-07-04.json
sentinela/builder/: claim_builder.py  evidence_builder.py  signals.py
sentinela/bulletin/: engine.py  models.py  postgres_reader.py
sentinela/cli/: run_filters.py
sentinela/clients/: base.py  fake.py  openrouter.py
supabase/: config.toml
taxonomy/: astronomy.yaml  atmospheric.yaml  climate.yaml  geology.yaml  geopolitics.yaml  oceanography.yaml  regions.yaml  remote_sensing.yaml  seismology.yaml  space_weather.yaml  volcanology.yaml
(+52 files in other folders)
