[project]
name = "sentinela-hl"
version = "0.1.0"
description = "Sentinela HL — pipeline de inteligência: coleta, filtra, valida e entrega boletim diário."
requires-python = ">=3.12"
dependencies = [
   "pydantic>=2.6",
   "pydantic-settings>=2.2",
   "httpx>=0.27",
]

[project.optional-dependencies]
# Dependências que entram nas fases seguintes (não usadas nos stubs do 111):
#   coleta:        feedparser, httpx
#   banco:         psycopg[binary]
#   classificação: anthropic
#   embeddings:    voyageai   (Documento 102 / filtro 5)
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = false
