[project]
name = "sentinela-hl"
version = "0.1.0"
description = "Sentinela HL — pipeline de inteligência: coleta, filtra, valida e entrega boletim diário."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
   "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = false